force-app/main/default/objects/Perguntas__c/Perguntas__c.object-meta.xml
<CustomObject>
    <label>Pergunta</label>
    <nameField>
        <label>Pergunta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Perguntas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>