force-app/main/default/objects/Perguntas__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marcada indica que a questão está ativa.</description>
    <label>Ativa</label>
    <type>Checkbox</type>
</CustomField>