force-app/main/default/objects/Perguntas__c/fields/PicklistValues__c.field-meta.xml
<CustomField>
    <fullName>PicklistValues__c</fullName>
    <description>Valores de lista de opções</description>
    <label>Valores Picklist</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>