force-app/main/default/objects/Perguntas__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Pergunta que será exibida no formulário.</description>
    <label>Pergunta</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>