force-app/main/default/objects/Perguntas__c/fields/QuestionType__c.field-meta.xml
<CustomField>
    <fullName>QuestionType__c</fullName>
    <description>Descreva o tipo de resposta aceita para essa pergunta</description>
    <label>Tipo de Pergunta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Texto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>