force-app/main/default/objects/Perguntas__c/fields/RequiredQuestion__c.field-meta.xml
<CustomField>
    <fullName>RequiredQuestion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caso marcado essa pergunta se torna obrigatória</description>
    <label>Obrigatória</label>
    <type>Checkbox</type>
</CustomField>