force-app/main/default/objects/Perguntas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>RequiredQuestion__c</columns>
    <columns>Question__c</columns>
    <columns>QuestionType__c</columns>
    <columns>PicklistValues__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>